Removed unparsable comments.
Removed unparsable comments blocking compilation.