@@ -91,19 +91,16 @@
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
                     <release>${maven.compiler.release}</release>
-                    <!--<compilerArgs> --enable-preview </compilerArgs>-->
                 </configuration>
             </plugin>
             <plugin>
                 <!--<groupId>org.apache.maven.plugins</groupId>-->
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire.version}</version>
-                <!--<configuration><argLine>--enable-preview</argLine></configuration>-->
             </plugin>
             <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>${surefire.version}</version>
-                <!--<configuration> <argLine>--enable-preview</argLine> </configuration>-->
             </plugin>
             <!--<plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
